force-app/main/default/objects/Case_Escalation__c/Case_Escalation__c.object-meta.xml
<CustomObject>
    <label>Case Escalation</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Escalation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>