force-app/main/default/objects/Case_Escalation__c/fields/Case_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Case_Escalation__c</fullName>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>