force-app/main/default/objects/Case_Escalation__c/fields/Day_Name__c.field-meta.xml
<CustomField>
    <fullName>Day_Name__c</fullName>
    <formula>CASE( MOD( DATEVALUE(Case__r.CreatedDate ) - DATE(1900, 1, 7), 7), 0, &quot;Minggu&quot;, 1, &quot;Senin&quot;, 2, &quot;Selasa&quot;, 3,
&quot;Rabu&quot;, 4, &quot;Kamis&quot;, 5, &quot;Jumat&quot;, 6, &quot;Sabtu&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Name</label>
    <type>Text</type>
</CustomField>