force-app/main/default/objects/Case_Escalation__c/fields/End_By__c.field-meta.xml
<CustomField>
    <fullName>End_By__c</fullName>
    <label>End By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>