force-app/main/default/objects/Case_Escalation__c/fields/End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>End_Datetime__c</fullName>
    <label>End Datetime</label>
    <type>DateTime</type>
</CustomField>