force-app/main/default/objects/Case_Escalation__c/fields/Last_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Last_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Escalation</label>
    <type>Checkbox</type>
</CustomField>