force-app/main/default/objects/Case_Escalation__c/fields/Lead_Time_F__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_F__c</fullName>
    <formula>IF(
End_Datetime__c - Start_Datetime__c &gt; 0 ,
TEXT( FLOOR( End_Datetime__c - Start_Datetime__c ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (End_Datetime__c - Start_Datetime__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (End_Datetime__c - Start_Datetime__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes &quot;
&amp; TEXT( ROUND( MOD( (End_Datetime__c - Start_Datetime__c ) * 24 * 60 * 60, 60 ), 0 ) ) &amp; &quot; seconds&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time</label>
    <type>Text</type>
</CustomField>