force-app/main/default/objects/Case_Escalation__c/fields/Named_User__c.field-meta.xml
<CustomField>
    <fullName>Named_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>Named_User__c</referenceTo>
    <relationshipLabel>Case Escalation</relationshipLabel>
    <relationshipName>Case_Escalation</relationshipName>
    <type>Lookup</type>
</CustomField>