force-app/main/default/objects/Case_Escalation__c/fields/Named_User_Owner__c.field-meta.xml
<CustomField>
    <fullName>Named_User_Owner__c</fullName>
    <label>Named User (Owner)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>