force-app/main/default/objects/Case_Escalation__c/fields/Target_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Target_Datetime__c</fullName>
    <formula>Start_Datetime__c + (Target_TAT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Datetime</label>
    <type>DateTime</type>
</CustomField>