force-app/main/default/objects/Case_Escalation__c/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <formula>IF (ISBLANK(End_Datetime__c), 
 IF (Target_Datetime__c &gt; NOW(), &apos;On Schedule&apos;, &apos;Late&apos;)
,
 IF (Target_Datetime__c &gt; End_Datetime__c, &apos;Meet&apos;, &apos;Late&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Status</label>
    <type>Text</type>
</CustomField>