force-app/main/default/objects/Case_Escalation__c/fields/Target_TAT__c.field-meta.xml
<CustomField>
    <fullName>Target_TAT__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Target TAT</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>